[gd_scene load_steps=18 format=3 uid="uid://b0tv17ivqoc1f"]

[ext_resource type="Script" path="res://minijeu_15/clothe_game.gd" id="1_ky7hf"]
[ext_resource type="Texture2D" uid="uid://dujr2crumufmu" path="res://minijeu_15/figures/background.png" id="2_co1w0"]
[ext_resource type="Texture2D" uid="uid://dw1jusfve4qs4" path="res://minijeu_15/figures/pant.png" id="3_gp1r7"]
[ext_resource type="Texture2D" uid="uid://blls7iw0ckhx0" path="res://minijeu_15/figures/short.png" id="4_fyl0a"]
[ext_resource type="Texture2D" uid="uid://dbl5ved5lfs43" path="res://minijeu_15/figures/sunglass.png" id="5_k355q"]
[ext_resource type="Texture2D" uid="uid://616s10c3y13" path="res://minijeu_15/figures/protectglass.png" id="6_3d1or"]
[ext_resource type="Texture2D" uid="uid://cabfsjcu53tnc" path="res://minijeu_15/figures/blouse.png" id="7_2l6jw"]
[ext_resource type="Texture2D" uid="uid://t8majx4k8rot" path="res://minijeu_15/figures/tee-shirt.png" id="8_ytlms"]
[ext_resource type="Texture2D" uid="uid://dtedajirremra" path="res://minijeu_15/figures/shoes.png" id="9_tkw3s"]
[ext_resource type="Texture2D" uid="uid://crfm1dnmt2ndt" path="res://minijeu_15/figures/open_shoes.png" id="10_y6diw"]
[ext_resource type="Texture2D" uid="uid://degsfyw57q4ka" path="res://minijeu_15/figures/gant.png" id="11_afctu"]
[ext_resource type="Texture2D" uid="uid://dnaele5a3fs34" path="res://minijeu_15/figures/Bananeouverte.png" id="12_e5yf0"]
[ext_resource type="Texture2D" uid="uid://bo2r0wo8y3jxr" path="res://minijeu_15/figures/hair.png" id="13_74lpx"]
[ext_resource type="Texture2D" uid="uid://b0luxt2aqycwl" path="res://minijeu_15/figures/hair-attach.png" id="14_xlff1"]
[ext_resource type="Texture2D" uid="uid://dxnieh5byuujx" path="res://minijeu_15/figures/mask.png" id="15_oh0hc"]
[ext_resource type="Texture2D" uid="uid://cypnaiy1v6rdn" path="res://minijeu_15/figures/carnaval.png" id="16_wmhgm"]
[ext_resource type="PackedScene" uid="uid://coasydelfxf46" path="res://clock.tscn" id="17_f2lv2"]

[node name="clothe_Game" type="Node"]
script = ExtResource("1_ky7hf")

[node name="BackGround" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.870607, 0.998954, 0.983926, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="body" type="Area2D" parent="."]
position = Vector2(483.6, 299.4)
scale = Vector2(0.5, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="body"]
position = Vector2(172.8, 39.2)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_co1w0")

[node name="p" type="Button" parent="body"]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = 817.0
offset_top = 147.0
offset_right = 1051.0
offset_bottom = 537.0

[node name="pant" type="Sprite2D" parent="body"]
visible = false
position = Vector2(322.8, 283.2)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_gp1r7")

[node name="sho" type="Button" parent="body"]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = -157.0
offset_top = 339.0
offset_right = 103.0
offset_bottom = 523.0

[node name="short" type="Sprite2D" parent="body"]
visible = false
position = Vector2(322.8, 177.2)
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_fyl0a")

[node name="sunglass" type="Button" parent="body"]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = -133.0
offset_top = -27.0
offset_right = 35.0
offset_bottom = 63.0

[node name="sunglasses" type="Sprite2D" parent="body"]
visible = false
position = Vector2(322.8, -368.8)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_k355q")

[node name="pglass" type="Button" parent="body"]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = 779.0
offset_top = -401.0
offset_right = 963.0
offset_bottom = -305.0

[node name="protectglass" type="Sprite2D" parent="body"]
visible = false
position = Vector2(324.8, -366.8)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_3d1or")

[node name="b" type="Button" parent="body"]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = -693.0
offset_top = -253.0
offset_right = -223.0
offset_bottom = 277.0

[node name="blouse" type="Sprite2D" parent="body"]
visible = false
position = Vector2(322.8, -4.80005)
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_2l6jw")

[node name="t" type="Button" parent="body"]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = 591.0
offset_top = -275.0
offset_right = 1051.0
offset_bottom = 113.0

[node name="teeshirt" type="Sprite2D" parent="body"]
visible = false
position = Vector2(326.8, -74.8)
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_ytlms")

[node name="s" type="Button" parent="body"]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = 485.0
offset_top = 375.0
offset_right = 769.0
offset_bottom = 549.0

[node name="shoes" type="Sprite2D" parent="body"]
visible = false
position = Vector2(322.8, 465.2)
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_tkw3s")

[node name="pensho" type="Button" parent="body"]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = -599.0
offset_top = 443.0
offset_right = -365.0
offset_bottom = 541.0

[node name="openshoes" type="Sprite2D" parent="body"]
visible = false
position = Vector2(326.8, 491.2)
scale = Vector2(0.25, 0.25)
texture = ExtResource("10_y6diw")

[node name="g" type="Button" parent="body"]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = -701.0
offset_top = 279.0
offset_right = -229.0
offset_bottom = 411.0

[node name="gant" type="Sprite2D" parent="body"]
visible = false
position = Vector2(322.8, 99.2)
scale = Vector2(0.25, 0.25)
texture = ExtResource("11_afctu")

[node name="bana" type="Button" parent="body"]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = 581.0
offset_top = 195.0
offset_right = 701.0
offset_bottom = 283.0

[node name="banana" type="Sprite2D" parent="body"]
visible = false
position = Vector2(132.8, 71.3875)
scale = Vector2(0.25, 0.314723)
texture = ExtResource("12_e5yf0")

[node name="h_l" type="Button" parent="body"]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = -183.0
offset_top = -465.0
offset_right = 95.0
offset_bottom = -43.0

[node name="hair_l" type="Sprite2D" parent="body"]
visible = false
position = Vector2(320.8, -270.8)
scale = Vector2(0.25, 0.25)
texture = ExtResource("13_74lpx")

[node name="h_c" type="Button" parent="body"]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = -181.0
offset_top = 127.0
offset_right = 97.0
offset_bottom = 273.0

[node name="hair_c" type="Sprite2D" parent="body"]
visible = false
position = Vector2(252.8, -468.8)
scale = Vector2(0.25, 0.25)
texture = ExtResource("14_xlff1")

[node name="m" type="Button" parent="body"]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = -517.0
offset_top = -395.0
offset_right = -323.0
offset_bottom = -283.0

[node name="mask" type="Sprite2D" parent="body"]
visible = false
position = Vector2(324.8, -314.8)
scale = Vector2(0.25, 0.25)
texture = ExtResource("15_oh0hc")

[node name="c" type="Button" parent="body"]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = 463.0
offset_top = -421.0
offset_right = 659.0
offset_bottom = -291.0

[node name="carnaval" type="Sprite2D" parent="body"]
visible = false
position = Vector2(320.8, -404.8)
scale = Vector2(0.25, 0.25)
texture = ExtResource("16_wmhgm")

[node name="clock" parent="." instance=ExtResource("17_f2lv2")]
visible = false

[node name="TEXT" type="CanvasLayer" parent="."]

[node name="win_state" type="Label" parent="TEXT"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.5
offset_top = -35.5
offset_right = 75.5
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="Button2" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -61.5
offset_top = -65.0
offset_right = 61.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Restart"

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -279.0
offset_right = 277.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
min_value = -5.0
max_value = 5.0
step = 1.0

[node name="Button3" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -184.0
offset_bottom = 77.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "to menu"

[node name="Label" type="Label" parent="Button3"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "coins :"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="body/p" to="." method="_on_p_pressed"]
[connection signal="pressed" from="body/sho" to="." method="_on_sho_pressed"]
[connection signal="pressed" from="body/sunglass" to="." method="_on_sunglass_pressed"]
[connection signal="pressed" from="body/pglass" to="." method="_on_pglass_pressed"]
[connection signal="pressed" from="body/b" to="." method="_on_b_pressed"]
[connection signal="pressed" from="body/t" to="." method="_on_t_pressed"]
[connection signal="pressed" from="body/s" to="." method="_on_s_pressed"]
[connection signal="pressed" from="body/pensho" to="." method="_on_pensho_pressed"]
[connection signal="pressed" from="body/g" to="." method="_on_g_pressed"]
[connection signal="pressed" from="body/bana" to="." method="_on_bana_pressed"]
[connection signal="pressed" from="body/h_l" to="." method="_on_h_l_pressed"]
[connection signal="pressed" from="body/h_c" to="." method="_on_h_c_pressed"]
[connection signal="pressed" from="body/m" to="." method="_on_m_pressed"]
[connection signal="pressed" from="body/c" to="." method="_on_c_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
